fix: 增加 perfect-scrollbar

--- a/src/styles/components/find/dailyNews.less
+++ b/src/styles/components/find/dailyNews.less
@@ -121,7 +121,7 @@
                         display: inline-block;
                         height: 16px;
                         line-height: 16px;
-                        top: -4px;
+                        vertical-align: middle;
                         img{
                             width: 12px;
                             height:12px;
@@ -134,7 +134,11 @@
                             color: #464E58;
                             letter-spacing: 0px;
                             line-height: 16px;
-                            margin-left: 17px;
+                            margin-left: 19px;
+                            overflow: hidden;
+                            text-overflow:ellipsis;
+                            white-space: nowrap;
+                            display: inline-block;
                         }
                     }
                     .item-center{
@@ -143,6 +147,7 @@
                         margin-left: 20px;
                         height: 16px;
                         line-height: 16px;
+                        vertical-align: middle;
                         img{
                             width: 14px;
                             height:14px;
@@ -159,16 +164,23 @@
                             overflow: hidden;
                             text-overflow:ellipsis;
                             white-space: nowrap;
-                            width: 125px;
+                            max-width: 125px;
                             display: inline-block;
                         }
                     }
                     .item-right{
                         position: absolute;
                         display: inline-block;
+                        height: 24px;
+                        line-height: 24px;
                         right: 8%;
-                        height: 16px;
-                        line-height: 16px;
+                        div{
+                            height: 16px;
+                            line-height: 16px;
+                            vertical-align: middle;
+                            display: inline-block;
+                            position: relative;
+                        }
                         img{
                             width: 14px;
                             height:14px;
